--- a/code/server/Admin/Tpl/ADManage/introduct.html
+++ b/code/server/Admin/Tpl/ADManage/introduct.html
@@ -12,7 +12,7 @@
 						<p>&nbsp;&nbsp;&nbsp;&nbsp;公司概况：贵州省金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立，注册资金200万元，自有多名掌握较好的干洗技术的技术骨干和多名从事多年家政保洁的员工，经集中进行专业技术及道德的培训，我公司员工自身素质较好。
 						</p>
 						<p>
-						&nbsp;&nbsp;&nbsp;&nbsp;企业文化：洗涤满意、服务满意、形象满意、尊重顾客、理解顾客持续提供超越顾客期望的产品的服务与质量；自我完善服务系统，加强洗前上门收取、前后消毒干洗中、洗净后送回的服务，队顾客在洗涤衣物中出现的各种问题及时帮助解决，让顾客们感到极大的方便。
+						&nbsp;&nbsp;&nbsp;&nbsp;企业文化：洗涤满意、服务满意、形象满意、尊重顾客、理解顾客持续提供超越顾客期望的产品的服务与质量；自我完善服务系统，加强洗前上门收取、前后消毒干洗中、洗净后送回的服务，对顾客在洗涤衣物中出现的各种问题及时帮助解决，让顾客们感到极大的方便。
 						</p>
 						<p>
 						&nbsp;&nbsp;&nbsp;&nbsp;公司产品：快客洗涤干洗加盟店、洗涤技术咨询与培训、洗涤设备销售、命名为“快客洗涤”的手机APP。
