--- a/code/LaundryWeb/Home/Tpl/Index/APPDownload.html
+++ b/code/LaundryWeb/Home/Tpl/Index/APPDownload.html
@@ -26,11 +26,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>	
 <body>
 <!--=== Header ===-->
-<div class="header" style="margin-top:20px;">               
+<div class="header" style="background:#007cb4">               
     <div class="container"> 
         <!-- Logo -->       
         <div class="logo">                                             
-            <a href="index.html"><img id="logo-header" src="__PUBLIC__/Fuego/img/logo.png" alt="Quik" /></a>
+            <a href="index.html"><img src="__PUBLIC__/Fuego/img/logo.jpg" alt="Quik" /></a>
         </div><!-- /logo -->        
                                     
         <!-- Menu -->       
@@ -44,16 +44,13 @@
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li >
-                            <a href="__URL__/index.html" >首页</a>                      
+                            <a href="__URL__/home.html" >首页</a>                      
                         </li>
                         <li >
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li >
-                            <a href="__URL__/equipment.html" >设备</a>                      
-                        </li>
-						<li >
-                            <a href="__URL__/washTech.html" >技术</a>                      
+                            <a href="__URL__/equipment.html" >设备/技术</a>                      
                         </li>
 						<li >
                             <a href="__URL__/joinUs.html" >加盟</a>                      
@@ -75,79 +72,142 @@
 	<div>
 		<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/banner01.jpg"/>
 	</div>
-	<div class="dd_container">
-	<section class="scroll_section phone_top pass_ma_top_spe">
-                <div class="didi_mess_block phone_checked_outer">
-                	<div class="didi_block_inner pt30">
-                    	<div class="col-lg-5 col-md-5 phone_pass_check text-center">
-                        	<div class="phone_check_title">
-                                <p><img src="images/yuyue-1.png" width="210"></p>
-                                <p class="none"><img src="images/yuyue-2.png" width="210"></p>
-                                <p class="none"><img src="images/yuyue-3.png" width="210"></p>
-                                <p class="none"><img src="images/yuyue-4.png" width="210"></p>
-                                <p class="none"><img src="images/yuyue-5.png" width="210"></p>
-                            </div>
-                            <div class="phone_inline phone_check_img_outer">
-                                <div class="left_btn left">
-                                    <a class="btn_left block_inner_btn ie_not_bg"></a>
-                                    <img class="is_ie_hide ie_btn ie_btn_left" src="__PUBLIC__/Fuego/img/APPDownload/left-gr.png" width="16" height="31">
-                                </div>
-                                <div class="mid_check_pass ie_not_bg left">
-                                    <img class="is_ie_hide ie_pass_img" src="images/ipone.png" width="259" height="539">
-                                    <div class="mid_check_box_pass">
-                                        <div class="posi_div">
-                                            <div class="img_outer" id="img_outer">
-                                                <img src="__PUBLIC__/Fuego/img/APPDownload/ip-01.jpg" width="220">
-                                                <img src="__PUBLIC__/Fuego/img/APPDownload/ip-02.jpg" width="220">
-                                                <img src="__PUBLIC__/Fuego/img/APPDownload/ip-03.jpg" width="220">
-                                                <img src="__PUBLIC__/Fuego/img/APPDownload/ip-04.jpg" width="220">
-                                                <img src="__PUBLIC__/Fuego/img/APPDownload/ip-05.jpg" width="220">
-                                                <img src="__PUBLIC__/Fuego/img/APPDownload/ip-01.jpg" width="220">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="right_btn left">
-                                    <a class="btn_right block_inner_btn ie_not_bg"></a>
-                                    <img class="is_ie_hide ie_btn ie_btn_right" src="__PUBLIC__/Fuego/img/APPDownload/right-gr.png" width="16" height="31">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-md-7 block_mess block_mess_cheked_side">
-                        	<div class="block_mess_outer">
-                            	<div class="block_mess_each">
-                                    <h4><img src="__PUBLIC__/Fuego/img/APPDownload/word-1.png" width="386"></h4>
-                                </div>
-                                <div class="block_mess_each none">
-                                    <h4><img src="__PUBLIC__/Fuego/img/APPDownload/word-2.png" width="386"></h4>
-                                </div>
-                                <div class="block_mess_each none">
-                                    <h4><img src="__PUBLIC__/Fuego/img/APPDownload/word-3.png" width="386"></h4>
-                                </div>
-                                <div class="block_mess_each none">
-                                    <h4><img src="__PUBLIC__/Fuego/img/APPDownload/word-4.png" width="386"></h4>
-                                </div>
-                                <div class="block_mess_each none">
-                                    <h4><img src="__PUBLIC__/Fuego/img/APPDownload/word-5.png" width="386"></h4>
-                                </div>
-                            </div>
-                            <p id="icon_outer" class="overflow-hid ie_btn_hide" style="margin-top:40px;">
-                            	<a class="mess_icon icon_a active"></a>
-                                <a class="mess_icon icon_b"></a>
-                                <a class="mess_icon icon_c"></a>
-                                <a class="mess_icon icon_d"></a>
-                                <a class="mess_icon icon_e"></a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+	<!--=== part 1 ===-->
+	<div class="container" style="margin-top:30px;">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-4">
+			<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/ip-01.jpg"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-5">
+			<p style="font-size:3em;margin-top:80px;margin-bottom:0px;color:#ff8e04;">衣物分类</p>
+			<p style="font-size:3em;margin-bottom:0px;color:#ff8e04;">一目了然</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">快客洗涤APP，方便您随时随地完成洗衣下单。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">衣物分类清晰、简洁，点击进入详细列表。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">一键下单，快速通道，洗衣下单只需一步。</p>
+		</div>
+		<div class="col-md-1">
+		</div>
 	</div>
-	<div class="lt-img-rt-tx index--first-part" style="padding-bottom: 20px;"> 
-    <div class="container"> 
-    	<img src="__PUBLIC__/Fuego/img/APPDownload/APP下载.png" />
-    </div> 
-   </div>
+	<div class="container">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-9">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!--=== part 2 ===-->
+	<div class="container" style="margin-top:0px;">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-5" style="margin-left:20px;">
+			<p style="font-size:3em;margin-top:80px;margin-bottom:0px;color:#ff8e04;">衣物分类</p>
+			<p style="font-size:3em;margin-bottom:0px;color:#ff8e04;">一目了然</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">快客洗涤APP，方便您随时随地完成洗衣下单。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">衣物分类清晰、简洁，点击进入详细列表。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">一键下单，快速通道，洗衣下单只需一步。</p>
+		</div>
+		<div class="col-md-4">
+			<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/ip-02.jpg"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-9">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!--=== part 3 ===-->
+	<div class="container">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-4">
+			<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/ip-03.jpg"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-5">
+			<p style="font-size:3em;margin-top:80px;margin-bottom:0px;color:#ff8e04;">洗衣篮</p>
+			<p style="font-size:3em;margin-bottom:0px;color:#ff8e04;">洗衣订单列表</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">洗衣产品信息清晰罗列。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">点击产品数量，可以轻松修改，也可随时删除。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">洗衣订单数量、总价清晰展示，方便核算。</p>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-9">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!--=== part 4 ===-->
+	<div class="container" style="margin-top:0px;">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-5" style="margin-left:20px;">
+			<p style="font-size:3em;margin-top:80px;margin-bottom:0px;color:#ff8e04;">订单查看</p>
+			<p style="font-size:3em;margin-bottom:0px;color:#ff8e04;">管理我的订单</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">我的订单，列表显示所有已生成的订单。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">点击订单，进入订单详情。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">用户可以取消下单，删除已完成的订单。</p>
+		</div>
+		<div class="col-md-4">
+			<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/ip-04.jpg"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-9">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!--=== part 5 ===-->
+	<div class="container">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-4">
+			<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/ip-05.jpg"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-5">
+			<p style="font-size:3em;margin-top:80px;margin-bottom:0px;color:#ff8e04;">个人中心</p>
+			<p style="font-size:3em;margin-bottom:0px;color:#ff8e04;">信息修改</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">个人中心可以修改自己的个人信息。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">同时，为了保护隐私，您也可以随时退出应用。</p>
+			<p style="font-size:1.2em;margin-bottom:0px;color:#999999;">完善个人信息，下单更快捷。</p>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container" style="margin-bottom:20px;">
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-9">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
    <!--=== Copyright ===-->
 <include file="./Home/Tpl/PublicTpl/copyright.html"/>
 <!--=== End Copyright ===-->
