--- a/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
+++ b/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
@@ -14,20 +14,20 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>	
 
 <include file="./Home/Tpl/PublicTpl/css.html"/>
-<style type="text/css">
+<link href="__PUBLIC__/ThirdParty/didi/css/bootcss/css/bootstrap.css" rel="stylesheet">
+<!--<style type="text/css">
 p{
  text-indent: 2em; /*em是相对单位，2em即现在一个字大小的两倍*/
 }
-</style>
+</style>-->
 <body>
  
-
 <!--=== Header ===-->
-<div class="header" style="margin-top:20px;">               
+<div class="header" style="background:#007cb4">               
     <div class="container"> 
         <!-- Logo -->       
         <div class="logo">                                             
-            <a href="index.html"><img id="logo-header" src="__PUBLIC__/Fuego/img/logo.png" alt="Quik" /></a>
+            <a href="index.html"><img src="__PUBLIC__/Fuego/img/logo.jpg" alt="Quik" /></a>
         </div><!-- /logo -->        
                                     
         <!-- Menu -->       
@@ -41,16 +41,13 @@ p{
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li >
-                            <a href="__URL__/index.html" >首页</a>                      
+                            <a href="__URL__/home.html" >首页</a>                      
                         </li>
                         <li class="active">
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li >
-                            <a href="__URL__/equipment.html" >设备</a>                      
-                        </li>
-						<li >
-                            <a href="__URL__/washTech.html" >技术</a>                      
+                            <a href="__URL__/equipment.html" >设备/技术</a>                      
                         </li>
 						<li >
                             <a href="__URL__/joinUs.html" >加盟</a>                      
@@ -69,76 +66,76 @@ p{
 </div><!--/header -->      
 <!--=== End Header ===-->
 <!--=== Breadcrumbs ===-->
-<div class="breadcrumbs margin-bottom-10">
-	<div class="container">
-        <h1 class="color-green pull-left">公司简介</h1>
-        <ul class="pull-right breadcrumb">
-            <li><a href="index.html"></a> <span class="divider"></span></li>
-            <li class="active"></li>
-        </ul>
-    </div><!--/container-->
-</div><!--/breadcrumbs-->
-<!--=== End Breadcrumbs ===-->
-
-<!--=== Content Part ===-->
-<div class="container">		
-	<div class="row-fluid blog-page">    
-        <!-- Left Sidebar -->
-    	<div class="span9">
-        	<div class="blog margin-bottom-30">
-            	<div class="headline"><h3 style="color:black">快客洗涤公司简介</h3></div>
-                <div class="blog-img" align="center" >
-                	<img src="__PUBLIC__/Fuego/img/company/bg1.png" alt="" />
-                </div>
-				<p style="font-size:1.3em">
-				贵州省金州快客清洁服务有限公司是一家集干洗衣物、洗涤技术咨询培训，室内保洁及物业管理等多项服务为一体的O2O模式专业环保型清洁服务公司。
-				</p>
-				<p style="font-size:1.3em">
-				公司管理机制完善，清洁作业采用专业清洗设备结合员工丰富的经验来进行工作流程；洗涤技术严格实行上岗前操作培训采用国内知名洗染技术及配方，让洗衣事故尽可能的减少，取得广大顾客的认可，凭着较高的洗涤、清洁质量和严格的管理制度，为众多企事业单位、酒店等提供优质的专业服务，特称之为“快客洗涤”。
-				</p>
-                <h2>公司概况：</h2>
-                <p style="font-size:1.3em">贵州省金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立，注册资金200万元，自有多名掌握较好的干洗技术的技术骨干和多名从事多年家政保洁的员工，经集中进行专业技术及道德的培训，我公司员工自身素质较好。</p>
-                <h2>企业文化：</h2>
-                <p style="font-size:1.3em">洗涤满意、服务满意、形象满意、尊重顾客、理解顾客持续提供超越顾客期望的产品的服务与质量；自我完善服务系统，加强洗前上门收取、前后消毒干洗中、洗净后送回的服务，队顾客在洗涤衣物中出现的各种问题及时帮助解决，让顾客们感到极大的方便。</p>
-                <h2>公司产品：</h2>
-                <p style="font-size:1.3em">快客洗涤干洗加盟店、洗涤技术咨询与培训、洗涤设备销售、命名为“快客洗涤”的手机APP。</p>
-            </div><!--/blog-->
-        </div><!--/span9-->
-
-        <!-- Right Sidebar -->
-    	<div class="span3">
-            <!-- Posts -->
-            <div class="posts margin-bottom-20">
-                <div class="headline"><h3>快客最新动态</h3></div>
-                <dl class="dl-horizontal">
-                    <dt><a><img src="__PUBLIC__/Fuego/img/company/WebSite.png" alt="" /></a></dt>
-                    <dd>
-                        <p><a>快客洗涤官方网站于2015年2月20号正式上线。</a></p> 
-                    </dd>
-                </dl>
-                <dl class="dl-horizontal">
-                    <dt><a><img src="__PUBLIC__/Fuego/img/company/app.png" alt="" /></a></dt>
-                    <dd>
-                        <p><a>快客洗涤APP IOS版于2015年2月14号正式上线。</a></p> 
-                    </dd>
-                </dl>
-                <dl class="dl-horizontal">
-                    <dt><a><img src="__PUBLIC__/Fuego/img/company/app.png" alt="" /></a></dt>
-                    <dd>
-                        <p><a>快客洗涤APP Android版于2015年2月6号正式上线。</a></p> 
-                    </dd>
-                </dl>
-                <dl class="dl-horizontal">
-                    <dt><a><img src="__PUBLIC__/Fuego/img/company/histroy.jpg" alt="" /></a></dt>
-                    <dd>
-                        <p><a>金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立了！</a></p> 
-                    </dd>
-                </dl>
-            </div><!--/posts-->
-        </div><!--/span3-->
-    </div><!--/row-fluid-->        
-</div><!--/container-->		
-<!--=== End Content Part ===-->
+	<div>
+		<img class="item" src="__PUBLIC__/Fuego/img/company/banner01.jpg"/>
+	</div>
+	<!--=== part 1 ===-->
+	<div class="container" style="margin-top:20px;">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10" style="padding-left:30px;padding-right:30px;">
+			<p style="font-size:1.2em;margin-top:0px;margin-bottom:0px;color:#000000">公司管理机制完善，清洁作业采用专业清洗设备结合员工丰富的经验来进行工作流程；洗涤技术严格实行上岗前操作培训采用国内知名洗染技术及配方，让洗衣事故尽可能的减少，取得广大顾客的认可，凭着较高的洗涤、清洁质量和严格的管理制度，为众多企事业单位、酒店等提供优质的专业服务，特称之为“快客洗涤”。</p>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container" style="margin-top:20px;">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!--=== part 2 ===-->
+	<div class="container" style="margin-top:20px;">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10" style="padding-left:30px;padding-right:30px;">
+			<p style="font-size:2.2em;margin-top:0px;margin-bottom:0px;color:#444444">快客洗涤公司简介</p>
+			<p style="font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">Introduction the Quik washing Ltd.</p>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container" style="margin-top:20px;">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<!--=== part 3 ===-->
+	<div class="container" style="margin-top:20px;">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-3" style="padding-left:30px;padding-right:30px;">
+			<p style="font-size:1.2em;width:200px;padding-left:10px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">公司概况：</p>
+			<p style="text-indent:2em;width:280px;font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">贵州省金州快客清洁服务有限公司经过长期的策划和筹备，于2014年12月1日正式成立，注册资金200万元，自有多名掌握较好的干洗技术的技术骨干和多名从事多年家政保洁的员工，经集中进行专业技术及道德的培训，我公司员工自身素质较好。</p>
+		</div>
+		<div class="col-md-3" style="padding-left:40px;">
+			<p style="font-size:1.2em;width:200px;padding-left:10px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">企业文化：</p>
+			<p style="text-indent:2em;width:280px;font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">洗涤满意、服务满意、形象满意、尊重顾客、理解顾客持续提供超越顾客期望的产品的服务与质量；自我完善服务系统，加强洗前上门收取、前后消毒干洗中、洗净后送回的服务，队顾客在洗涤衣物中出现的各种问题及时帮助解决，让顾客们感到极大的方便。</p>
+		</div>
+		<div class="col-md-3" style="padding-left:60px;">
+			<p style="font-size:1.2em;width:200px;padding-left:10px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">公司产品：</p>
+			<p style="text-indent:2em;width:300px;font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">快客洗涤干洗加盟店、洗涤技术咨询与培训、洗涤设备销售、命名为“快客洗涤”的手机APP。</p>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
+	<div class="container" style="margin-top:20px;margin-bottom:30px;">
+		<div class="col-md-1">
+		</div>
+		<div class="col-md-10">
+		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+		</div>
+		<div class="col-md-1">
+		</div>
+	</div>
 
 <!--=== Copyright ===-->
 <include file="./Home/Tpl/PublicTpl/copyright.html"/>
