--- a/code/LaundryWeb/Home/Tpl/Index/washTech.html
+++ b/code/LaundryWeb/Home/Tpl/Index/washTech.html
@@ -19,11 +19,11 @@ p{
 </style>	
 <body>
 <!--=== Header ===-->
-<div class="header" style="margin-top:20px;">               
+<div class="header" style="background:#007cb4">               
     <div class="container"> 
         <!-- Logo -->       
         <div class="logo">                                             
-            <a href="index.html"><img id="logo-header" src="__PUBLIC__/Fuego/img/logo.png" alt="Quik" /></a>
+            <a href="index.html"><img src="__PUBLIC__/Fuego/img/logo.jpg" alt="Quik" /></a>
         </div><!-- /logo -->        
                                     
         <!-- Menu -->       
