网站改版，更新第一轮测试bug

--- a/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
+++ b/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
@@ -32,12 +32,7 @@ p{
                                     
         <!-- Menu -->       
         <div class="navbar">                                
-            <div class="navbar-inner">                                  
-               <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a><!-- /nav-collapse -->                     
+            <div class="navbar-inner">                   
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li >
@@ -121,8 +116,8 @@ p{
 			<p style="text-indent:2em;width:280px;font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">洗涤满意、服务满意、形象满意、尊重顾客、理解顾客持续提供超越顾客期望的产品的服务与质量；自我完善服务系统，加强洗前上门收取、前后消毒干洗中、洗净后送回的服务，队顾客在洗涤衣物中出现的各种问题及时帮助解决，让顾客们感到极大的方便。</p>
 		</div>
 		<div class="col-md-3" style="padding-left:60px;">
-			<p style="font-size:1.2em;width:200px;padding-left:10px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">公司产品：</p>
-			<p style="text-indent:2em;width:300px;font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">快客洗涤干洗加盟店、洗涤技术咨询与培训、洗涤设备销售、命名为“快客洗涤”的手机APP。</p>
+			<p style="font-size:1.2em;width:200px;padding-left:10px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">最新动态：</p>
+			<p style="text-indent:2em;width:300px;font-size:1.1em;margin-top:0px;margin-bottom:0px;color:#444444">2014年12月1日公司正式成立；2014年1月1日覆盖兴义市区；随后就写你们纪录的app两个系统的分别上线时间，最后写成 2015年3月18日正式覆盖贵州省黔西南州所有县、市、区；2015年3月18日APP客户端及官方网站正式投入使用。</p>
 		</div>
 		<div class="col-md-1">
 		</div>
