--- a/code/LaundryWeb/Home/Tpl/Index/contactUs.html
+++ b/code/LaundryWeb/Home/Tpl/Index/contactUs.html
@@ -76,13 +76,7 @@ html,body {
                                     
         <!-- Menu -->       
         <div class="navbar">                                
-            <div class="navbar-inner"> 
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a><!-- /nav-collapse -->                                  
-                                                                 
+            <div class="navbar-inner">                                           
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li >
@@ -120,20 +114,24 @@ html,body {
 		<div class="col-md-5">
 			<img class="item" src="__PUBLIC__/Fuego/img/about/addr.jpg"/>
 		</div>
-		<div class="col-md-2" align="right" style="padding-left:0px;padding-right:0px;">
-			<p style="font-size:1.2em;width:100px;text-align:center;margin-top:40px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系地址</p>
-			<p style="font-size:1.2em;width:100px;text-align:center;margin-top:40px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系邮箱</p>
-			<p style="font-size:1.2em;width:100px;text-align:center;margin-top:10px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系电话</p>
-			<p style="font-size:1.2em;width:100px;text-align:center;margin-top:10px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系手机</p>
-			<p style="font-size:1.2em;width:100px;text-align:center;margin-top:10px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系人</p>
-		</div>
-		<div class="col-md-2" style="padding-left:10px;padding-right:0px;">
-			<p style="font-size:1.2em;text-decoration:underline;margin-top:40px;margin-bottom:0px;color:#444444">贵州省兴义市瑞金大道3号兴义商城4-1706</p>
-			<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">996825888@qq.com</p>
-			<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">0859-6825888</p>
-			<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">18108595666</p>
-			<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">郭经理</p>
-		</div>
+		<div class="col-md-4">
+			<div class="col-md-5" align="right" style="padding-left:0px;padding-right:0px;">
+				<p style="font-size:1.2em;width:100px;text-align:center;margin-top:40px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系地址</p>
+				<p style="font-size:1.2em;width:100px;text-align:center;margin-top:40px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系邮箱</p>
+				<p style="font-size:1.2em;width:100px;text-align:center;margin-top:10px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系电话</p>
+				<p style="font-size:1.2em;width:100px;text-align:center;margin-top:10px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系手机</p>
+				<p style="font-size:1.2em;width:100px;text-align:center;margin-top:10px;margin-bottom:0px;color:#ffffff;background:#0074b1">联系人</p>
+			</div>
+			<div class="col-md-6" style="padding-left:10px;padding-right:0px;">
+				<p style="font-size:1.2em;text-decoration:underline;margin-top:40px;margin-bottom:0px;color:#444444">贵州省兴义市瑞金大道3号兴义商城4-1706</p>
+				<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">996825888@qq.com</p>
+				<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">0859-6825888</p>
+				<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">18108595666</p>
+				<p style="font-size:1.2em;text-decoration:underline;margin-top:10px;margin-bottom:0px;color:#444444">郭经理</p>
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>		
 		<div class="col-md-2">
 		</div>
 	</div>
@@ -141,15 +139,21 @@ html,body {
 	<div class="container" style="margin-top:0px;">
 		<div class="col-md-1">
 		</div>
-		<div class="col-md-6">
-			<div  class="col-md-3">
+		<div class="col-md-5">
+			<div  class="col-md-4">
 				<p style="font-size:1.8em;margin-top:10px;margin-bottom:0px;color:#444444">工作时间</p>
 			</div>
 			<div class="col-md-7" align="left" style="padding-left:0px;padding-right:0px;">
 				<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:30px;margin-bottom:0px;"/>
 			</div>
 		</div>
-		<div class="col-md-6" style="padding-left:10px;padding-right:0px;">
+		<div class="col-md-5" style="padding-left:10px;padding-right:0px;">
+			<div  class="col-md-4">
+				<p style="font-size:1.8em;margin-top:10px;margin-bottom:0px;color:#444444">收送时间</p>
+			</div>
+			<div class="col-md-7" align="left" style="padding-left:0px;padding-right:0px;">
+				<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:30px;margin-bottom:0px;"/>
+			</div>
 		</div>
 	</div>
 	<!--=== part 3 ===-->
@@ -160,7 +164,9 @@ html,body {
 			<p style="font-size:1.2em;width:400px;text-align:center;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">周一 ~ 周五：上午：9:00 ~ 晚上：8:00</p>
 			<p style="font-size:1.2em;width:400px;text-align:center;margin-top:0px;margin-bottom:0px;color:#ffffff;background:#0074b1">周六 ~ 周日：上午：9:00 ~ 晚上：5:00</p>
 		</div>
-		<div class="col-md-6" style="padding-left:10px;padding-right:0px;">
+		<div class="col-md-5" style="padding-left:10px;padding-right:0px;">
+			<p style="font-size:1.2em;width:400px;text-align:center;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">上午：9:00 ~ 晚上：22:00</p>
+			<p style="font-size:1.2em;width:400px;text-align:center;margin-top:0px;margin-bottom:0px;color:#ffffff;background:#0074b1">客服电话：0859-3383000</p>
 		</div>
 	</div>
 <!--=== Copyright ===-->
