--- a/code/LaundryWeb/Home/Tpl/Index/home.html
+++ b/code/LaundryWeb/Home/Tpl/Index/home.html
@@ -81,12 +81,7 @@ html,body {
                                     
         <!-- Menu -->       
         <div class="navbar">                                
-            <div class="navbar-inner">                                  
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a><!-- /nav-collapse -->                                  
+            <div class="navbar-inner">                                                                  
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li class="active">
@@ -117,52 +112,27 @@ html,body {
 <!--=== End Header ===-->
 <!--=== Slider ===-->
 <div id="page">
-<div class="fullwidthbanner-container">
-    <div class="fullwidthabnner" >
-        <ul>
-        	<!-- THE FIRST SLIDE -->
-            <li data-transition="flyin" data-slotamount="1" data-masterspeed="300" data-thumb="assets/img/sliders/revolution/thumbs/thumb4.jpg">
-                
-                <!-- THE MAIN IMAGE IN THE FOURTH SLIDE -->                                
-                <img src="__PUBLIC__/Fuego/img/index/banner01.jpg" />
-
-                <div class="caption lfb boxshadow" data-x="-70" data-y="40" data-speed="900" data-start="500" data-easing="easeOutBack">
-                     <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="692" height="390"
-						  poster="__PUBLIC__/Fuego/img/index/video_pic.png"
-						  data-setup="{}">
-						<source src="__PUBLIC__/Fuego/img/index/hw_u_396095.mp4" type='video/mp4'></source>
-					  </video>  
-                </div>
-            </li>  
-        </ul>
-    </div>
-</div>
-	<div style="margin-top:30px;">
-		<img class="item" src="__PUBLIC__/Fuego/img/index/banner02.jpg"/>
+	<div>
+		<img class="item" src="__PUBLIC__/Fuego/img/home/banner01.jpg"/>
+		<div class="caption lfb boxshadow" style="float:left;margin-top:-23%;margin-left:10%;">
+	       <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="498" height="280"
+			  poster="__PUBLIC__/Fuego/img/home/video_pic.png"
+			  data-setup="{}">
+			<source src="__PUBLIC__/Fuego/img/home/hw_u_396095.mp4" type='video/mp4'></source>
+		  </video>  
+	    </div>
+	</div>
+	<div style="margin-top:0px;">
+		<img class="item" src="__PUBLIC__/Fuego/img/home/banner02.jpg"/>
+	</div>
+	<div style="margin-top:0px;">
+		<img class="item" src="__PUBLIC__/Fuego/img/home/banner03.jpg"/>
 	</div>
 	<div class="container" style="margin-top:10px;">
 		<div class="col-md-1">
 		</div>
 		<div class="col-md-10">
-		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
-		</div>
-		<div class="col-md-1">
-		</div>
-	</div>
-	<div class="container" style="margin-top:10px;">
-		<div class="col-md-1">
-		</div>
-		<div class="col-md-10">
-			<img class="item" src="__PUBLIC__/Fuego/img/index/banner03.jpg"/>
-		</div>
-		<div class="col-md-1">
-		</div>
-	</div>
-	<div class="container" style="margin-top:10px;margin-bottom:20px">
-		<div class="col-md-1">
-		</div>
-		<div class="col-md-10">
-		<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:0px;"/>
+			<img class="item" src="__PUBLIC__/Fuego/img/home/banner04.jpg"/>
 		</div>
 		<div class="col-md-1">
 		</div>
