修改网站第二轮bug

--- a/code/LaundryWeb/Home/Tpl/Index/APPDownload.html
+++ b/code/LaundryWeb/Home/Tpl/Index/APPDownload.html
@@ -13,6 +13,8 @@
     <include file="./Home/Tpl/PublicTpl/css.html"/>   
 	<!-- didi CSS -->
 	 <link href="__PUBLIC__/ThirdParty/didi/css/bootcss/css/bootstrap.css" rel="stylesheet">
+	 <link href="http://s1.xmcdn.com/20150303113158/css/web.css" rel="stylesheet" type="text/css">
+	 <script src="http://s1.xmcdn.com/js/recordchannelfrom.js?v=20150303113509"></script>
 <body>
 <!--=== Header ===-->
 <div class="header" style="background:#007cb4">               
@@ -34,7 +36,7 @@
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li >
-                            <a href="__URL__/equipment.html" >设备/技术</a>                      
+                            <a href="__URL__/equipment.html" >洗涤设备</a>                      
                         </li>
 						<li >
                             <a href="__URL__/joinUs.html" >加盟</a>                      
@@ -55,6 +57,16 @@
 <!--=== End Header ===-->
 	<div>
 		<img class="item" src="__PUBLIC__/Fuego/img/APPDownload/banner01.jpg"/>
+		<div class="caption lfb boxshadow" style="float:right;margin-top:-20%;margin-right:20%;height:10%;width:10%;">
+			<a href="https://itunes.apple.com/cn/app/kuai-ke-xi-di/id963489193?mt=8">
+			<video poster="__PUBLIC__/Fuego/img/APPDownload/IOS.png"> </video>
+			</a> 
+	    </div>
+	    <div class="caption lfb boxshadow" style="float:right;margin-top:-15%;margin-right:20%;height:10%;width:10%;">
+			<a href="http://www.kkxd.com.cn/Laundry/Public/App/Android/kuaikexidi.apk">
+			<video poster="__PUBLIC__/Fuego/img/APPDownload/Android.png"> </video>
+			</a>
+	    </div>
 	</div>
 	<!--=== part 1 ===-->
 	<div class="container" style="margin-top:30px;">
