--- a/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
+++ b/code/LaundryWeb/Home/Tpl/Index/companyInfo.html
@@ -42,7 +42,7 @@ p{
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li >
-                            <a href="__URL__/equipment.html" >设备/技术</a>                      
+                            <a href="__URL__/equipment.html" >洗涤设备</a>                      
                         </li>
 						<li >
                             <a href="__URL__/joinUs.html" >加盟</a>                      
