--- a/code/LaundryWeb/Home/Tpl/Index/equipment.html
+++ b/code/LaundryWeb/Home/Tpl/Index/equipment.html
@@ -69,7 +69,7 @@ function textOff()
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li class="active">
-                            <a href="__URL__/equipment.html" >设备/技术</a>                      
+                            <a href="__URL__/equipment.html" >洗涤设备</a>                      
                         </li>
 						<li >
                             <a href="__URL__/joinUs.html" >加盟</a>                      
@@ -258,106 +258,6 @@ function textOff()
                     </span>
                 </a>
             </li>
-        </ul>        
-	</div><!--/row-->
-	<!-- 君萍化料系列 -->
-	<div class="span9" style="margin-left:0px;">
-		<p style="font-size:1.5em;width:450px;padding-left:5px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">快客技术 Auxiliary equipment series</p>
-		<p style="font-size:1.5em;width:450px;margin-top:3px;margin-bottom:0px;color:#0173af">君萍化料</p>
-	</div>
-	<div class="span9" style="margin-left:0px;margin-bottom:0px;">
-    	<hr style="height:1px;border:none;border-top:1px solid #555555;margin-top:0px;margin-bottom:10px;"/>
-    	<p style="font-size:1.1em;margin-top:10px;margin-bottom:0px;color:#666666">
-    		君萍化料是唯一掌握全面安全救治的化料，即可以安全防止，也可以做救治服务。因为君萍化料有着十
-           	年数万件衣物救治技术经验，所以才可以安全防止，没有救治技术是谈不上安全的。
-        </p>
-        <p style="font-size:1.1em;margin-top:10px;margin-bottom:0px;color:#666666">
-        	亡羊补牢不如防患于未然，让没有技术的员工也会操作，也是可以传承的标准流程，不用专业培训，君
-           	萍洗染的老师可以教员工，员工可以教新员工，如果不会，看看流程表就会独立操作。加盟商就不会在
-           	为员工洗坏衣服或不懂技术而发愁了，有专业的区域技术总监培训，还有非常专业的售后服务人员。君
-           	萍化料及工艺经数以千计的人员测试是安全可行。
-        </p>
-        <p style="font-size:1.1em;margin-top:10px;margin-bottom:0px;color:#666666">
-        	君萍化料是安全、高效，防止事故，节约可以循环使用的环保化料。
-			君萍化料永远站在衣物的流行时尚前线，因为全国各地有几十个技术总监在发现洗衣难题，不断上报总部，
-			总部会及时的根据放映的问题给出应对的化料及工艺流程来完善行业问题：比如洗涤速度有优化洗涤工艺。
-        </p>
-        <p style="font-size:1.1em;margin-top:10px;margin-bottom:0px;color:#666666">
-        	羊毛真丝84烧伤有救治工艺、皮边衣物洗涤防止掉色也有高科技的化料、比如真丝洗涤发白问题我们更是轻
-			松洗涤去油不发白等等洗涤行业的最强音都在君萍洗染……
-        </p>
-    </div>
-    <div class="span9" style="margin-left:0px;margin-top:30px;">
-		<p style="font-size:1.5em;padding-left:5px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#0074b1">
-			本公司自筹建以来，多处引进洗涤技术，经过反复的测试与实际操作后决定引进“君萍洗染”技术
-		</p>
-		<p style="font-size:1.3em;margin-top:3px;margin-bottom:0px;color:#0173af">
-			安全的洗涤化料，安全的洗涤技术，安全的去除污渍，君萍化料防止事故，帮你解决烦恼，远离困扰。
-		</p>
-	</div>
-    <div class="row-fluid margin-bottom-40" style="margin-top:0px;margin-bottom:0px;">
-    </div>
-	<div class="headline">
-		<p style="font-size:1.4em;width:450px;padding-left:5px;margin-top:0px;margin-bottom:10px;color:#ffffff;background:#57585a">君萍化料系列  Jun Ping material series</p>
-	</div>
-    <div class="row-fluid margin-bottom-40">
-        <ul id="list" class="bxslider recent-work">
-            <li>
-                <a>
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_1.jpg" alt="" /></em>
-                </a>
-            </li>
-            <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_2.jpg" alt="" /></em>
-                </a>
-            </li>
-            <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_3.jpg" alt="" /></em>
-                </a>
-            </li>
-            <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_4.jpg" alt="" /></em>
-                </a>
-            </li>
-            <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_5.jpg" alt="" /></em>
-                </a>
-            </li>
-            <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_6.jpg" alt="" /></em>
-                </a>
-            </li>
-             <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_7.jpg" alt="" /></em>
-                </a>
-            </li>
-             <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_8.jpg" alt="" /></em>
-                </a>
-            </li>
-             <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_9.jpg" alt="" /></em>
-                </a>
-            </li>
-             <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_10.jpg" alt="" /></em>
-                </a>
-            </li>
-            <li>
-                <a >
-                	<em class="overflow-hidden"><img src="__PUBLIC__/Fuego/img/tech/tech_11.jpg" alt="" /></em>
-                </a>
-            </li>
-
         </ul>        
 	</div><!--/row-->
 	</div>
