--- a/code/LaundryWeb/Home/Tpl/Index/joinUs.html
+++ b/code/LaundryWeb/Home/Tpl/Index/joinUs.html
@@ -28,12 +28,7 @@
                                     
         <!-- Menu -->       
         <div class="navbar">                                
-            <div class="navbar-inner">                                  
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a><!-- /nav-collapse -->                                  
+            <div class="navbar-inner">                                                                  
                 <div class="nav-collapse collapse">                                     
                     <ul class="nav top-2">
                         <li >
@@ -43,7 +38,7 @@
                             <a href="__URL__/companyInfo.html" >公司简介</a>                      
                         </li>
 						<li >
-                            <a href="__URL__/equipment.html" >设备/技术</a>                      
+                            <a href="__URL__/equipment.html" >洗涤设备</a>                      
                         </li>
 						<li class="active">
                             <a href="__URL__/joinUs.html" >加盟</a>                      
@@ -131,218 +126,133 @@
 	<div class="container" style="margin-top:2px;margin-bottom:0px;">
 		<div class="col-md-1">
 		</div>
-		<div class="col-md-10" style="padding-left:0px;padding-right:0px;">
-			<div class="col-md-4" style="padding-left:15px;padding-right:0px;">
-				<table class="table table-striped" style="font-size: 12px">
+		<div class="col-md-10" style="padding-left:15px;padding-right:15px;">
+				<table class="table table-striped" style="font-size:13px">
+                    <thead>
+                        <tr>
+                            <th width="16%">相关项目</th>
+                            <th width="21%">收送点</th>
+                            <th width="21%">标准店</th>
+                            <th width="21%">形象店</th>
+                            <th width="21%">旗舰店</th>
+                        </tr>
+                    </thead>
                     <tbody>
-                        <tr >
-						  <td width="30%">经营面积</td>
+                        <tr>
+						  <td >经营面积</td>
 						  <td >10-20平米</td>
-						</tr>
-						<tr >
-						  <td width="30%">投入资金</td>
+						  <td >40-60平米</td>
+						  <td >60-90平米</td>
+						  <td >90平米以上</td>
+						 </tr>
+						 <tr>
+						  <td >经营项目</td>
 						  <td >为公司总部洗衣收送点</td>
-						</tr>
-						<tr >
-						  <td width="35%">APP后台店员账户</td>
+						  <td >快客洗涤干洗店</td>
+						  <td >快客洗涤干洗店</td>
+						  <td >快客洗涤干洗店</td>
+						 </tr>
+						 <tr>
+						  <td >投入资金</td>
 						  <td >￥：6000-10000元（可选项）</td>
-						</tr>
-						<tr >
-						  <td width="30%">加盟费</td>
+						  <td >￥：76000-120000元</td>
+						  <td >￥：139000-239000元</td>
+						  <td >￥：338000-398000元</td>
+						 </tr>
+						 <tr>
+						  <td >加盟费</td>
 						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">APP年管理费</td>
+						  <td >￥：8800元</td>
+						  <td >￥：12000元</td>
+						  <td >￥：16000元</td>
+						 </tr>
+						 <tr>
+						  <td >APP年管理费</td>
 						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">形象保证金</td>
+						  <td >按APP用户量的消费比例提起</td>
+						  <td >按APP用户量的消费比例提起</td>
+						  <td >按APP用户量的消费比例提起</td>
+						 </tr>
+						 <tr>
+						  <td >形象保证金</td>
 						  <td >5000元（可返还）</td>
-						</tr>
-						<tr >
-						  <td width="30%">品牌使用费</td>
+						  <td >10000元（可返还）</td>
+						  <td >10000元（可返还）</td>
+						  <td >10000元（可返还）</td>
+						 </tr>
+						 <tr>
+						  <td >品牌使用费</td>
 						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">合约期</td>
+						  <td >无</td>
+						  <td >无</td>
+						  <td >无</td>
+						 </tr>
+						 <tr>
+						  <td >合约期</td>
 						  <td >合约期由加盟商自行决定</td>
-						</tr>
-						<tr >
-						  <td width="30%">VI形象</td>
+						  <td >三年</td>
+						  <td >五年</td>
+						  <td >永久</td>
+						 </tr>
+						 <tr>
+						  <td >VI形象</td>
 						  <td >统一公司标准</td>
-						</tr>
-						<tr >
-						  <td width="30%">店面选址</td>
-						  <td >由我们公司人员提供建议</td>
-						</tr>
-						<tr >
-						  <td width="30%">店面设计</td>
 						  <td >统一公司标准</td>
-						</tr>
-						<tr >
-						  <td width="30%">培训人员</td>
+						  <td >统一公司标准</td>
+						  <td >统一公司标准</td>
+						 </tr>
+						 <tr>
+						  <td >店面选址</td>
+						  <td >由我公司人员提供建议</td>
+						  <td >由我公司人员提供建议</td>
+						  <td >由我公司人员提供建议</td>
+						  <td >由我公司人员提供建议</td>
+						 </tr>
+						 <tr>
+						  <td >店面设计</td>
+						  <td >统一公司标准</td>
+						  <td >统一公司标准</td>
+						  <td >统一公司标准</td>
+						  <td >统一公司标准</td>
+						 </tr>
+						 <tr>
+						  <td >培训人员</td>
 						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">带店指导期限</td>
+						  <td >1名店长</td>
+						  <td >1名店长、2名员工</td>
+						  <td >2名店长、3名员工</td>
+						 </tr>
+						 <tr>
+						  <td >带店指导期限</td>
 						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">开业策划</td>
+						  <td >7天</td>
+						  <td >15天</td>
+						  <td >30天</td>
+						 </tr>
+						 <tr>
+						  <td >开业策划</td>
 						  <td >赠送</td>
-						</tr>
-						<tr >
-						  <td width="30%">赠送礼包</td>
+						  <td >赠送</td>
+						  <td >赠送</td>
+						  <td >赠送</td>
+						 </tr>
+						 <tr>
+						  <td >赠送礼包</td>
 						  <td >见详单</td>
-						</tr>
-						<tr >
-						  <td width="30%">APP后台店员账户</td>
+						  <td >见详单</td>
+						  <td >见详单</td>
+						  <td >见详单</td>
+						 </tr>
+						 <tr>
+						  <td >APP后台店员账户</td>
 						  <td >无</td>
-						</tr>
+						  <td >用户量查询需向总公司总部查询</td>
+						  <td >有</td>
+						  <td >有</td>
+						 </tr>
                     </tbody>
                 </table>
 			</div>
-			<div class="col-md-4" style="padding-left:3px;padding-right:3px;">
-				<table class="table table-striped" style="font-size: 12px">
-                    <tbody>
-                        <tr >
-						  <td width="30%">经营面积</td>
-						  <td >10-20平米</td>
-						</tr>
-						<tr >
-						  <td width="30%">投入资金</td>
-						  <td >为公司总部洗衣收送点</td>
-						</tr>
-						<tr >
-						  <td width="35%">APP后台店员账户</td>
-						  <td >￥：6000-10000元（可选项）</td>
-						</tr>
-						<tr >
-						  <td width="30%">加盟费</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">APP年管理费</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">形象保证金</td>
-						  <td >5000元（可返还）</td>
-						</tr>
-						<tr >
-						  <td width="30%">品牌使用费</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">合约期</td>
-						  <td >合约期由加盟商自行决定</td>
-						</tr>
-						<tr >
-						  <td width="30%">VI形象</td>
-						  <td >统一公司标准</td>
-						</tr>
-						<tr >
-						  <td width="30%">店面选址</td>
-						  <td >由我们公司人员提供建议</td>
-						</tr>
-						<tr >
-						  <td width="30%">店面设计</td>
-						  <td >统一公司标准</td>
-						</tr>
-						<tr >
-						  <td width="30%">培训人员</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">带店指导期限</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">开业策划</td>
-						  <td >赠送</td>
-						</tr>
-						<tr >
-						  <td width="30%">赠送礼包</td>
-						  <td >见详单</td>
-						</tr>
-						<tr >
-						  <td width="30%">APP后台店员账户</td>
-						  <td >无</td>
-						</tr>
-                    </tbody>
-                </table>
-			</div>
-			<div class="col-md-4" style="padding-left:0px;padding-right:15px;">
-				<table class="table table-striped" style="font-size: 12px">
-                    <tbody>
-                        <tr >
-						  <td width="30%">经营面积</td>
-						  <td >10-20平米</td>
-						</tr>
-						<tr >
-						  <td width="30%">投入资金</td>
-						  <td >为公司总部洗衣收送点</td>
-						</tr>
-						<tr >
-						  <td width="35%">APP后台店员账户</td>
-						  <td >￥：6000-10000元（可选项）</td>
-						</tr>
-						<tr >
-						  <td width="30%">加盟费</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">APP年管理费</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">形象保证金</td>
-						  <td >5000元（可返还）</td>
-						</tr>
-						<tr >
-						  <td width="30%">品牌使用费</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">合约期</td>
-						  <td >合约期由加盟商自行决定</td>
-						</tr>
-						<tr >
-						  <td width="30%">VI形象</td>
-						  <td >统一公司标准</td>
-						</tr>
-						<tr >
-						  <td width="30%">店面选址</td>
-						  <td >由我们公司人员提供建议</td>
-						</tr>
-						<tr >
-						  <td width="30%">店面设计</td>
-						  <td >统一公司标准</td>
-						</tr>
-						<tr >
-						  <td width="30%">培训人员</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">带店指导期限</td>
-						  <td >无</td>
-						</tr>
-						<tr >
-						  <td width="30%">开业策划</td>
-						  <td >赠送</td>
-						</tr>
-						<tr >
-						  <td width="30%">赠送礼包</td>
-						  <td >见详单</td>
-						</tr>
-						<tr >
-						  <td width="30%">APP后台店员账户</td>
-						  <td >无</td>
-						</tr>
-                    </tbody>
-                </table>
-			</div>
-		</div>
 		<div class="col-md-1">
 		</div>
 	</div>
