后台管理系统bug修改
1、订单列表页面显示联系人名称
2、点击左侧功能菜单刷新对应页面

--- a/code/server/Admin/Tpl/OrderManage/orderManage.html
+++ b/code/server/Admin/Tpl/OrderManage/orderManage.html
@@ -57,7 +57,7 @@
 				<th hidden="true" data-options="field:'price_type',width:80,formatter:formatPrice" >价格类型</th>
 				<th data-options="field:'read_status',width:40,align:'center',formatter:formatReadStatus">已读</th>
 				<th data-options="field:'order_code',width:160">订单编号</th>
-				<!--<th data-options="field:'order_name',width:100">订单名称</th>-->
+				<th data-options="field:'contact_name',width:100">联系人名称</th>
 				<th data-options="field:'user_name',width:120">会员账号</th>
 				<th data-options="field:'create_time',width:160">下单时间</th>
 				<th data-options="field:'pay_option',width:80">支付方式</th>
