--- a/code/server/Admin/Tpl/OrderManage/orderInfo.html
+++ b/code/server/Admin/Tpl/OrderManage/orderInfo.html
@@ -33,7 +33,7 @@
 				<td>送货时间:</td>
 	  			<td><input name="delivery_time" class="easyui-textbox" type="text" readonly="readonly"></input></td>
 	  			<td>客户名称:</td>
-	  			<td><input name="customer_name" class="easyui-textbox" type="text" readonly="readonly"></input></td>
+	  			<td><input name="contact_name" class="easyui-textbox" type="text" readonly="readonly"></input></td>
 	  			<td>客户电话:</td>
 	  			<td><input name="phone" class="easyui-textbox" type="text" readonly="readonly"></input></td>
 	  		</tr>
